Fix for website on phone with taskbar always visible

--- a/src/app/components/windows95/windows95-applications/notepad/notepad.component.scss
+++ b/src/app/components/windows95/windows95-applications/notepad/notepad.component.scss
@@ -66,6 +66,12 @@
         }
       }
 
+      img {
+        width: 50%;
+        height: auto;
+        object-fit: contain;
+      }
+
       .experience,
       .degree {
         display: flex;
