--- a/src/app/components/windows95/windows95-taskbar/windows95-taskbar.component.scss
+++ b/src/app/components/windows95/windows95-taskbar/windows95-taskbar.component.scss
@@ -2,11 +2,16 @@
 @use "../../../../styles/mixins" as *;
 
 .taskbar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   height: $windows95-taskbar-height;
   background-color: $windows95-gray-color;
   border-top: 2px solid white;
   align-items: center;
+  z-index: 9999;
 
   .taskbar__item {
     display: flex;
